# PrivGuard

./: .gitignore  Dockerfile  README.md  agent.py  environment.py  grader.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py  server.py  tasks.py
baseline/: run_agent.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  ManualMode.jsx  Simulation.jsx  Training.jsx
privguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scratch/: verify_submission.py
server/: app.py
