[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privguard"
version = "0.1.0"
description = "AI Privacy Redaction & Data Sharing Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Harshit Gupta"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "google-generativeai",
    "numpy",
    "python-multipart",
    "jinja2",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
privguard = "server.app:main"
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/harshitguptaa5/PrivGuard"

[tool.setuptools]
packages = ["server"]
py-modules = ["agent", "environment", "grader", "inference", "main", "schemas", "tasks"]

